# GraphFleet

./: .env.example  .env.exemple  .gitignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.streamlit  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  SECURITY.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  api.py  app.py  azure-pipelines.yml  cspell.config.yaml  dictionary.txt  docker-compose.yml  main.py  my_notebook.ipynb  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  azure-pipelines.yml  dependabot.yml
.github/workflows/: ci-cd.yml  codeql.yml  dependency-review.yml  graphfleet-openapi.json  graphfleet.stainless.yaml  javascript-ci.yml  main_giy.yml  node.js.yml  openapi_stainless.yml  publish.yml  python-ci.yml  python-publish.yml  python-smoke-tests.yml  spellcheck.yml
app/: Dockerfile  api.py  config.py  dependencies.py  exceptions.py  main.py  middleware.py  models.py  requirements.txt  streamlit_app.py  utils.py
app/.streamlit/: config.toml
app/core/: config.py
app/middleware/: auth.py  rate_limiter.py  request_logger.py
app/models/: entity.py
app/routers/: admin.py  search.py
app/services/: graphfleet.py  indexer.py  question_generator.py  search_engine.py
app/utils/: __init__.py  cache.py  context_builder.py  convert_numpy.py  data_processing.py  logging.py  security.py
backend/: Dockerfile  README.md  setup.cfg  setup.py
backend/app/: config.py  main.py  models.py
backend/app/api/: deps.py
backend/app/api/api_v1/endpoints/: prompt_tune.py  query.py  question_gen.py
backend/app/api/v1/: endpoints.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/db/: init_db.py  session.py
backend/app/middleware/: error_handler.py  logging.py  rate_limiter.py  request_handler.py
backend/app/schemas/: search.py
backend/app/services/: graph.py  graph_service.py  llm.py  prompt_tune.py  query.py  search.py  search_engine.py
backend/app/utils/: context_builder.py  data_processing.py
backend/docs/: api.md
backend/docs/guides/: advanced_features.md
backend/examples/: 01_quickstart.ipynb  02_advanced_features.ipynb  03_indexing.ipynb  04_auto_prompting.ipynb  05_advanced_querying.ipynb  README.md
backend/graphfleet/: README.md  __init__.py  cli.py  main.py  pipeline.yml  requirements.txt  run_local.py  settings.yaml
backend/graphfleet/app/: config.py  models.py  services.py
backend/graphfleet/app/modules/: __init__.py  document_processor.py  drift.py  prompt_tuning.py
backend/graphfleet/config/: __init__.py
backend/graphfleet/core/: __init__.py  base.py  features.py  indexer.py  querying.py  storage.py  types.py
backend/graphfleet/index/: __init__.py
backend/graphfleet/indexing/: chunker.py
backend/graphfleet/input/: Ironies of Generative AI.txt
backend/graphfleet/prompting/: generator.py
backend/graphfleet/prompts/: community_report.txt  entity_extraction.txt  global_search_map_system_prompt.txt  global_search_reduce_system_prompt.txt  summarize_descriptions.txt
backend/graphfleet/querying/: optimizer.py
backend/graphfleet/storage/: __init__.py
backend/graphfleet/tests/: .env.template  conftest.py  test_azure_integration.py
backend/graphfleet/tests/test_data/: README.md
backend/graphfleet/tests/test_data/output/: communities.parquet  entities.parquet  nodes.parquet  relationships.parquet
backend/graphfleet/utils/: auto_prompt_tuning.py  cache.py  chunker.py  prompt_generator.py  storage.py
backend/src/graphfleet/: __init__.py
backend/src/graphfleet/app/: __init__.py  models.py  services.py
backend/src/graphfleet/core/: __init__.py  features.py  storage.py  types.py
backend/templates/: base.yml  settings.yml
backend/tests/: conftest.py  test_api.py  test_search_engine.py
docs/: CONFIGURATION.md  CORE_CONCEPTS.md  FASTAPI_APPLICATION.md  GET_STARTED_QUICKLY.md  GRAPHRAG_IMPLEMENTATION.md  STREAMLIT_UI.md  TROUBLESHOOTING.md
docs/api/: README.md
docs/architecture/: README.md
docs/guides/: getting-started.md
examples/: 01_quickstart.ipynb  01_quickstart.py  02_indexing.py  README.md  getting_started.ipynb  index_text.py  sample.txt
examples/basic/: document_search.py  knowledge_graph.py
examples/integrations/: external_services.py
examples/notebooks/: 01_adding_files.ipynb  01_document_ingestion.ipynb  02_auto_prompt_tuning.ipynb  03_document_indexing.ipynb
examples/performance/: optimization.py
examples/sample_docs/: ai_challenges.txt  machine_learning.txt
examples_notebooks/: local_search.ipynb
examples_notebooks/graphfleet/: settings.yaml
frontend/: app.py
gemsim/: smart_open-7.0.4-py3-none-any.whl  wrapt-1.16.0-cp312-cp312-macosx_11_0_arm64.whl
gfleetenv/: pyvenv.cfg
graphfleet/: .env.example  .env.exemple  read_env.py  settings.yaml
graphfleet-venv/: pyvenv.cfg
graphfleet/api/: api.py  api.yaml  main.py  model.py  openapi.stainless.yml  openapi.yml  utils.py
graphfleet/config/: defaults.py  read_dotenv.py
graphfleet/core/: __init__.py
graphfleet/in_progress_api/: api.py
graphfleet/indexing/: __init__.py
graphfleet/infra/: deploy.parameters.json  deploy.sh
graphfleet/input/: Agent Instructions.txt  (+6 more)
input/: GraphRAG.txt
lib/: convert_pdf_txt.py
notebook/: Get Started Quickly.ipynb  Global Search Notebook.ipynb  Graph Visualization Notebook.ipynb  Local Search Notebook.ipynb  api_notebook_alpha.ipynb  get-started-graphfleet.ipynb  global_search.ipynb  graph-visualization.ipynb  local_search.ipynb  local_search_notebook.py
notebooks/: get-started-graphfleet.ipynb  global_search.ipynb  graph-visualization.ipynb  local_search.ipynb
output/: create_final_documents.parquet
sample_project/: test_graphfleet.py
scripts/: copy_graphrag_source.py  semver-check.sh  start-azurite.sh  start-azurite.sh.save  uv_install.sh
tests/: test_graphfleet.py
tools/: .env.example  Genaiscript v1.51.0.vsix
(+1397 files in other folders)
