[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphfleet"
version = "0.7.5"
description = "A graph-based knowledge management and query system"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["graph", "knowledge", "search", "semantic"]
authors = [
    { name = "Zachary BENSALEM", email = "contact@qreddence.ai" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "networkx>=3.4.2",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "jupyterlab>=4.0.0",
    "nbformat>=5.0.0",
    "nbconvert>=7.0.0",
    "types-networkx>=3.4.2",
]

[tool.hatch.build]
packages = ["backend"]

[tool.setuptools]
package-dir = {"" = "backend"}
packages = ["graphfleet"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto" 