[metadata]
name = graphfleet
version = 0.7.0
description = A powerful graph-based knowledge management and query system
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    faiss-cpu>=1.7.4
    fastapi>=0.100.0
    ipykernel>=6.0.0
    jupyter>=1.0.0
    networkx>=3.4.2
    notebook>=7.0.0
    numpy>=1.24.0
    pandas>=2.0.0
    pydantic>=2.0.0
    pyyaml>=6.0
    scikit-learn>=1.3.0
    sentence-transformers>=2.2.2
    uvicorn>=0.22.0

[options.packages.find]
where = src 